# cascade

./: CMakeLists.txt
include/cascade/: oob_buffer.hpp  service.hpp
include/cascade/detail/: oob_buffer_impl.hpp  service_impl.hpp
src/applications/standalone/oob/cfg/n0/: derecho.cfg
src/applications/standalone/oob/cfg/n2/: derecho.cfg
src/applications/standalone/oob_fast_path/: CMakeLists.txt
src/applications/standalone/oob_fast_path/cfg/: dfgs.json  udl_dlls.cfg
src/applications/standalone/oob_fast_path/cfg/n0/: derecho.cfg
src/applications/standalone/oob_fast_path/cfg/n1/: derecho.cfg
src/applications/standalone/oob_fast_path/cfg/n2/: derecho.cfg
src/applications/standalone/oob_fast_path/src/: oob_fast_path.cpp
src/applications/standalone/oob_test/: CMakeLists.txt  build.sh
src/applications/standalone/oob_test/cfg/n0/: derecho.cfg
src/applications/standalone/oob_test/cfg/n1/: derecho.cfg
src/applications/standalone/oob_test/cfg/n2/: derecho.cfg
src/applications/standalone/oob_test/cfg/n3/: derecho.cfg
src/applications/standalone/oob_test/src/: clientA.cpp  clientC.cpp  oob_udl.cpp
